discussion/kv_engine/174946/174946_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52134: ByID scan support for MagmaKVStore

Implement the scan(ByIdScanContext) function utilising magma's
KeyIterator.

OSO and RangeScan tests are enabled to give coverage of this feature.

Change-Id: Ida6b030175077920c854ee492d1f7cfb2ae659b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-17 13:43:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-05-17 13:47:54.000000000
Message: 
Patch Set 1:

(1 comment)
Line:2258, engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc -> whoops - reverting. ByID scans still need dropped collection data as they may encounter a key from a previous generation of the collection (or flushed)

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-17 13:53:20.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46176/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19291/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19291/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19639/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27696/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27696/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20317/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20317/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17528/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2062:20: error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult" [clang-diagnostic-error]
            return ScanStatus::Failed;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-scan-result.h:19:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "ScanStatus" to "const MagmaScanResult &" for 1st argument
struct MagmaScanResult {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-scan-result.h:19:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "ScanStatus" to "MagmaScanResult &&" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-scan-result.h:29:5: note: candidate constructor not viable: no known conversion from "ScanStatus" to "MagmaScanResult::Status" for 1st argument
    MagmaScanResult(Status s) : code(s) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:72:41: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
void DomainAwareKeyIterator::Seek(const Slice& startKey) {
                                        ^~~~~
                                        magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:92:7: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
const Slice DomainAwareKeyIterator::GetKey() {
      ^~~~~
      magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:98:7: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
const Slice DomainAwareKeyIterator::GetMeta() {
      ^~~~~
      magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:104:1: error: no type named "SeqNo" in namespace "magma"; did you mean "magma::Magma::SeqNo"? [clang-diagnostic-error]
Magma::SeqNo DomainAwareKeyIterator::GetSeqno() const {
^~~~~~~~~~~~
magma::Magma::SeqNo
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:52:11: note: "magma::Magma::SeqNo" declared here
    using SeqNo = uint64_t;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:104:1: error: use of undeclared identifier "Magma"; did you mean "magma"? [clang-diagnostic-error]
Magma::SeqNo DomainAwareKeyIterator::GetSeqno() const {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:40:11: note: "magma" declared here
namespace magma {
          ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:110:1: error: unknown type name "Status"; did you mean "magma::Status"? [clang-diagnostic-error]
Status DomainAwareKeyIterator::GetValue(Slice& value) {
^~~~~~
magma::Status
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/status.h:30:20: note: "magma::Status" declared here
class LIBMAGMA_API Status {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:110:41: error: unknown type name "Slice" [clang-diagnostic-error]
Status DomainAwareKeyIterator::GetValue(Slice& value) {
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17528/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2062:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17528/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38791/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:72:41:
error: unknown type name "Slice"; did you mean "magma::Slice"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38791/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7138/ : FAILURE

Compile error at [2022-05-17T13:48:50.354Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2062:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7138/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18503/ : FAILURE

Compile error at [2022-05-17T13:47:39.448Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2062:20:
error: no viable conversion from returned value of type "ScanStatus" to function return type "MagmaScanResult"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18503/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7236/ : FAILURE

Compile error at [2022-05-17T13:50:33.231Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2062:32:
error: could not convert ?ScanStatus::Failed? from ?ScanStatus? to ?MagmaScanResult?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7236/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16550/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
